同步 SI 实现并清理旧 PRUN 路径